--- a/src/scss/layout/_fonts.scss
+++ b/src/scss/layout/_fonts.scss
@@ -27,3 +27,12 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Source Code Pro';
+  src: url('../fonts/Sourcecodepro.woff') format('woff'),
+  url('../fonts/Sourcecodepro.woff2') format('woff2'),
+  url('../fonts/Sourcecodepro.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
