--- a/src/scss/layout/_var.scss
+++ b/src/scss/layout/_var.scss
@@ -3,6 +3,7 @@
 $font: 'Source Sans Pro Regular';
 $font600: 'Source Sans Pro Semibold';
 $fontBold: 'Source Sans Pro Bold';
+$fontCode: 'Source Code Pro';
 
 //colors
 
