--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,12 @@
 @import "components/item-card";
 @import "components/similar";
 
+@import "components/profile/profile";
+@import "components/profile/profile-left";
+@import "components/profile/profile-block";
+@import "components/profile/profile-item";
+@import "components/profile/profile-chat";
+
 @import "components/pagination";
 @import "components/numbers";
 @import "components/footer";
