--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -51,6 +51,78 @@
     background: url('../img/select-arrow.svg') no-repeat center right 18px;
   }
 
+  &__profile {
+    border: 0;
+    outline: none!important;
+    background: transparent;
+    color: $dark;
+    font-size: 15px;
+    line-height: 12px;
+    position: relative;
+    padding: 5px 20px 5px 28px;
+
+    @include media-breakpoint-down(xs) {
+      font-size: 14px;
+      padding-right: 15px;
+      padding-left: 22px;
+    }
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 18px;
+      height: 20px;
+      background: url('../img/profile.svg');
+
+      @include media-breakpoint-down(xs) {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 14px;
+        top: 1px;
+      }
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 8px;
+      width: 9px;
+      height: 6px;
+      background: url('../img/select-arrow.svg');
+
+      @include media-breakpoint-down(xs) {
+        top: 9px;
+      }
+    }
+  }
+
+  &__dropdown {
+    &.show {
+      top: 10px!important;
+      margin-left: -30px!important;
+
+      @media (min-width: 768px) and (max-width: 785px) {
+        left: auto!important;
+        right: -10px;
+      }
+
+      @media (min-width: 576px) and (max-width: 600px) {
+        left: auto!important;
+        right: -10px;
+      }
+
+      @include media-breakpoint-down(xs) {
+        margin-left: -80px!important;
+      }
+    }
+  }
+
   &__link {
     color: $dark;
     font-size: 15px;
