add edit ads screens and login modal

--- a/src/html/components/footer.pug
+++ b/src/html/components/footer.pug
@@ -61,3 +61,6 @@ footer.footer
                 a.footer__bottom Политика конфиденциальности
             div.col-lg-3.col-md-4.col-sm-6.col-xs-12
                 a.footer__bottom Пользовательское соглашение
+
+// MODAL
+include ../components/modal.pug
