--- a/src/scss/components/profile/_profile.scss
+++ b/src/scss/components/profile/_profile.scss
@@ -38,6 +38,7 @@
     .form-check-label {
       color: $txt!important;
       font-size: 15px!important;
+      padding-left: 12px!important;
     }
   }
 
