--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,10 @@
 @import "components/profile/profile-item";
 @import "components/profile/profile-chat";
 
+@import "components/edit/edit";
+@import "components/edit/edit-steps";
+@import "components/edit/edit-photos";
+
 @import "components/pagination";
 @import "components/numbers";
 @import "components/footer";
